--- a/config_sample.env
+++ b/config_sample.env
@@ -1,28 +1,26 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 
-# ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+# REQUIRED CONFIG
+BOT_TOKEN = "5335032533:AAF_gDcklAj2aghoPS7eMYSPH-lYGDvkDUc"
+GDRIVE_FOLDER_ID = "0AJgVcdD5fnQDUk9PVA"
+OWNER_ID = 1809131695
 DOWNLOAD_DIR = "/home/slam/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
-HEROKU_API_KEY = ""
-HEROKU_APP_NAME = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 13493475
+TELEGRAM_HASH = "5fd6ee7f9dc9fb3db0bb2875458c1d39"
+HEROKU_API_KEY = "557d5beb-a632-4297-86f3-71a6b4d82667"
+HEROKU_APP_NAME = "electronmirrorbot"
 # Optional config
 AUTHORIZED_CHATS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "Flase"
+INDEX_URL = "https://electron.electronmirrorbot.workers.dev"
 UPTOBOX_TOKEN = ""
 MEGA_KEY = ""
 MEGA_USERNAME = ""
 MEGA_PASSWORD = ""  
 BLOCK_MEGA_LINKS = ""
-STOP_DUPLICATE_MIRROR = ""
+STOP_DUPLICATE_MIRROR = "True"
 SHORTENER = ""
 SHORTENER_API = ""
 IMAGE_URL = "https://telegra.ph/file/09cddb14c45b63bda2d47.png"
